@@ -19,6 +19,8 @@
  * Highlight name changes in email (#1297)
  * Time out calls to stitcher after 45 minutes using new `--timeout` option to stitcher. (#1234)
  * Avoid looking at all aggregates when hitting DETAILS button on jacks 
+ * Pass full context (not just most recent topology change) between
+   slice-add-resources-jacks and jacks-editor-app-expanded (#1301).
    app when there are no aggregates with resources (#1302)
 
 == 2.26 ==
